# example-basic-gtest-presets

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  main.cpp
include/: my_math.h
src/: CMakeLists.txt  my_math.cpp
tests/: CMakeLists.txt  test_my_math.cpp
